cabal-version:   3.0
name:            debuggable
version:         0.1.0
synopsis:        Utilities for making your applications more debuggable.
description:     This package provides various utilities that can be used to
                 make your application easier to debug. Some of these tools are
                 intended for use during actual debugging only (similar to
                 @Debug.Trace@, for example). Other tools can be used as a
                 regular component in your application, to facilitate debugging
                 if and when necessary, but always present in your code.
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@well-typed.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==8.10.7
               , GHC==9.2.8
               , GHC==9.4.8
               , GHC==9.6.6
               , GHC==9.8.2
               , GHC==9.10.1

common lang
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.14 && < 4.21

  default-extensions:
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DerivingStrategies
      GeneralizedNewtypeDeriving
      NamedFieldPuns
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections

library
  import:         lang
  hs-source-dirs: src

  exposed-modules:
    Debug.NonInterleavedIO
    Debug.NonInterleavedIO.Scoped
    Debug.NonInterleavedIO.Trace
    Debug.Provenance
    Debug.Provenance.Scope

  build-depends:
    , containers           >= 0.6   && < 0.8
    , exceptions           >= 0.9   && < 0.11
    , hashable             >= 1.4   && < 1.6
    , temporary            >= 1.2.1 && < 1.4
    , unordered-containers >= 0.2   && < 0.3
