cabal-version:   3.0
name:            niio
version:         0.1.0
synopsis:        Simple IO functions that guarantee non-interleaved output
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@well-typed.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==8.10.7
               , GHC==9.2.8
               , GHC==9.4.8
               , GHC==9.6.6
               , GHC==9.8.2
               , GHC==9.10.1

common lang
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.14 && < 4.20

library
  import:          lang
  exposed-modules: System.IO.NonInterleaved
  hs-source-dirs:  src

  build-depends:
      temporary >= 1.3 && < 1.4

