cabal-version:   3.0
name:            niio
version:         0.1.0
synopsis:        Functions for debugging that guarantee non-interleaved output
license:         BSD-3-Clause
license-file:    LICENSE
author:          Edsko de Vries
maintainer:      edsko@well-typed.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==8.10.7
               , GHC==9.2.8
               , GHC==9.4.8
               , GHC==9.6.6
               , GHC==9.8.2
               , GHC==9.10.1

common lang
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.14 && < 4.21

  default-extensions:
      DeriveFunctor
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving

library
  import:          lang
  exposed-modules: System.IO.NonInterleaved
  hs-source-dirs:  src

  build-depends:
    , exceptions           >= 0.9   && < 0.11
    , hashable             >= 1.4   && < 1.6
    , temporary            >= 1.2.1 && < 1.4
    , unordered-containers >= 0.2   && < 0.3
